--- a/sample-pages/wrapper/index.ejs
+++ b/sample-pages/wrapper/index.ejs
@@ -18,8 +18,8 @@
 
         body {
             margin: 0;
-            padding: 1em;
             display: flex;
+            background: #ecf0f1;
         }
 
         #the-sidebar {
@@ -27,6 +27,9 @@
             flex-direction: column;
             max-height: 100%;
             height: 100%;
+            width: 84px;
+            padding: 0.5em;
+            background-color: #34495e;
         }
 
         #the-sidebar > .button {
